@@ -4,23 +4,48 @@ use warnings;
 
 use Test::More;
 use CPAN::Changes;
+my ( $sample_version, $sample, $release_sample, $group_sample, $sample_changes );
 
 BEGIN {
-  my $sample_version = '0.400002';
-  my $sample         = <<'EOF';
+  $sample_version = '0.500001';
+  $sample         = <<'EOF';
 1.7.5 2013-08-01T09:48:11Z
  [Group]
  - Child Entry Line 1
  - Child Entry Line 2
 EOF
-
-  return if CPAN::Changes->load_string($sample)->serialize eq $sample;
+  $release_sample = <<'EOF';
+1.7.5 2013-08-01T09:48:11Z
+ [Group]
+ - Child Entry Line 1
+ - Child Entry Line 2
+EOF
+  $group_sample = <<'EOF';
+[Group]
+ - Child Entry Line 1
+ - Child Entry Line 2
+EOF
+  $sample_changes = CPAN::Changes->load_string($sample);
+  return if $ENV{AUTHOR_TESTING};
+  return
+        if $sample_changes->serialize eq $sample
+    and $sample_changes->release('1.7.5')->serialize eq $release_sample
+    and $sample_changes->release('1.7.5')->get_group('Group')->serialize eq $group_sample;
   plan
     skip_all => sprintf "Serialization scheme of CPAN::Changes %s is different to that of %s",
     $CPAN::Changes::VERSION, $sample_version;
 }
 
-use Test::Differences qw( eq_or_diff_text );
+local $TODO;
+if ( not eval "CPAN::Changes->VERSION(q[0.500]); 1" ) {
+  $TODO = "Legacy serialization scheme";
+}
+
+use Test::Differences qw( eq_or_diff_text eq_or_diff );
+
+eq_or_diff( $sample_changes->serialize,                                       $sample,         'Guard: Whole file same' );
+eq_or_diff( $sample_changes->release('1.7.5')->serialize,                     $release_sample, 'Guard: release same' );
+eq_or_diff( $sample_changes->release('1.7.5')->get_group('Group')->serialize, $group_sample,   'Guard: group same' );
 
 # FILENAME: basic.t
 # CREATED: 08/01/14 22:58:44 by Kent Fredric (kentnl) <kentfredric@gmail.com>
@@ -83,4 +108,3 @@ utf8::encode($expected);
 eq_or_diff_text( $result, $expected, 'Serialize works as intended' );
 
 done_testing;
-
